@@ -1,5 +1,5 @@
 AC_PREREQ(2.53)
-AC_INIT(libavg, 1.5.0, uzadow@libavg.de)
+AC_INIT(libavg, 1.5.1, uzadow@libavg.de)
 AC_CANONICAL_TARGET
 
 AC_DISABLE_STATIC
@@ -7,7 +7,7 @@ AC_PROG_LIBTOOL
 
 MAJOR_VERSION=1
 MINOR_VERSION=5
-MICRO_VERSION=0
+MICRO_VERSION=1
 VERSION=$MAJOR_VERSION.$MINOR_VERSION.$MICRO_VERSION dnl
 
 AC_CONFIG_MACRO_DIR([m4])
